clusters/titania/apps/shoppinglist/ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppinglist-ui
spec:
  selector:
    matchLabels:
      app: shoppinglist-ui
  template:
    metadata:
      labels:
        app: shoppinglist-ui
    spec:
      containers:
        - name: ui
          image: ghcr.io/greeshmabk/shoppinglist-ui:1730552099 # {"$imagepolicy": "shoppinglist:shoppinglist-ui"}
