clusters/titania/apps/shoppinglist/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppinglist-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
  rules:
  - host: shoppinglist.cosmos.cboxlab.com
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: shoppinglist
            port:
              number: 8080
      - path: /swagger
        pathType: ImplementationSpecific
        backend:
          service:
            name: shoppinglist
            port:
              number: 8080
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: shoppinglist-ui
            port:
              number: 8080
